@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.8
 
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578)
+	- FLUID incorrectly opened the display when generating
+	  source code for Fl_Help_View widgets (STR #1318)
 	- Fl_Double_Window did not always show the scheme
 	  background image.
 	- Fixed first window behavior in OS X (STR #1548)
